--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
 		<meta
@@ -8,8 +8,280 @@
 		/>
 		<title>Home</title>
 		<link rel="stylesheet" href="style/geral.css" />
+		<link rel="stylesheet" href="style/home.css" />
 	</head>
 	<body>
-		<header class="cabecalho">teste</header>
+		<header class="cabecalho">
+			<nav class="menus">
+				<li class="item">
+					<a href="" class="link-nav selecionado">Home</a>
+				</li>
+				<li class="item">
+					<a
+						href="./pdf/Currículo Guilherme G. Suave.pdf"
+						class="link-nav"
+						download="Curriculo Guilherme Suave"
+						>Currículo</a
+					>
+				</li>
+				<li class="item">
+					<a
+						href="https://github.com/GGSuave"
+						class="link-nav"
+						external
+						>GitHub</a
+					>
+				</li>
+				<li class="item">
+					<a href="" class="link-nav">Serviços</a>
+				</li>
+			</nav>
+		</header>
+
+		<main>
+			<section class="sobre-mim">
+				<div class="tamanho-padrao-caixa caixa">
+					<div class="w-50 caixa-img">
+						<div class="bg-img-perfil"></div>
+					</div>
+					<div class="w-50 caixa-texto">
+						<div>
+							<h1 class="nome">Guilherme Suave</h1>
+							<div class="div-paragrafo">
+								<p>
+									Sou estudante de Ciência
+									da Computação na UVV e
+									atuo profissionalmente
+									como Auxiliar de
+									Programação. Tenho grande
+									interesse no
+									desenvolvimento front-end
+									e estou constantemente em
+									busca de aprimorar minhas
+									habilidades na criação de
+									interfaces intuitivas,
+									responsivas e visualmente
+									atrativas.
+								</p>
+								<p>
+									Atualmente, dedico-me ao
+									aprendizado contínuo de
+									novas tecnologias, sempre
+									com o objetivo de evoluir
+									tanto no aspecto técnico
+									quanto no profissional.
+								</p>
+								<p>
+									Valorizo profundamente o
+									trabalho em equipe, a
+									organização e a clareza na
+									comunicação — qualidades
+									que considero fundamentais
+									para o sucesso na área de
+									tecnologia.
+								</p>
+								<p>
+									Nos momentos de lazer,
+									gosto de passar tempo com
+									minha família ou jogar,
+									atividades que me ajudam a
+									equilibrar a rotina,
+									estimular a criatividade e
+									manter o foco no dia a
+									dia.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="trabalhos">
+				<div class="tamanho-padrao-caixa my-1">
+					<h1 class="my-1">
+						Minha Trajetória Profissional
+					</h1>
+					<div class="caixa-trabalhos">
+						<div class="caixa-empresa">
+							<div class="w-full centralizado">
+								<img
+									src="./img/logo-empresas/ciee.png"
+									alt="Logo CIEE"
+									width="180px"
+								/>
+							</div>
+							<div class="w-full centralizado">
+								<h3>
+									CIEE / EL Produções de
+									Software
+								</h3>
+								<p>
+									&#x1F4BC; Menor Aprendiz -
+									&#x1F4C5; Set 2021 a Dez
+									2022
+								</p>
+							</div>
+						</div>
+						<div class="caixa-empresa">
+							<div class="w-full centralizado">
+								<img
+									src="img/logo-empresas/el.png"
+									alt="Logo El"
+									width="150px"
+								/>
+							</div>
+							<div class="w-full centralizado mb-1">
+								<h3>
+									EL Produções de Software
+								</h3>
+								<p>
+									&#x1F4BC; Auxiliar de
+									Programação Pleno —
+									&#x1F4C5; Fev 2023 até o
+									momento
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="w-full caixa-programa-atual flex">
+						<div class="w-50 my-1 texto-programa-atual">
+							<p class="texto">
+								Atualmente, estou atuando com a
+								linguagem Vue.js no meu
+								trabalho. Tenho aprendido
+								bastante sobre componentes,
+								reatividade e organização de
+								projetos com foco em front-end
+								moderno.
+							</p>
+							<p class="texto">
+								Vue.js é uma ferramenta usada
+								para criar sites e sistemas que
+								respondem rapidamente ao que o
+								usuário faz. Com ela, dá pra
+								montar páginas interativas,
+								organizadas e fáceis de manter
+							</p>
+							<p class="texto">
+								É como montar um site usando
+								blocos, onde cada parte é um
+								pedacinho separado que pode ser
+								reaproveitado.
+							</p>
+						</div>
+						<div class="w-50 centralizado">
+							<img
+								src="./img/programacao/Vue.js_Logo_2.svg.png"
+								alt="Logo Vue.Js"
+								width="15%"
+							/>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="um-pouco-mais centralizado">
+				<div class="tamanho-padrao-caixa">
+					<h1 class="my-1">Um Pouco Mais Sobre Mim</h1>
+					<div class="flex w-full">
+						<div class="w-50 centralizado">
+							<iframe
+								width="360"
+								height="215"
+								src="https://www.youtube.com/embed/eiANVt-Kr_s?si=gl43OcsMsyaYKkGb"
+								title="YouTube video player"
+								frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+								referrerpolicy="strict-origin-when-cross-origin"
+								allowfullscreen
+							></iframe>
+						</div>
+						<div class="w-50 centralizado">
+							<h3>Esse é o meu estilo músical!</h3>
+							<p class="texto">
+								Pode parecer um pouco diferente
+								dos demais. Mas é o estilo de
+								música que eu geralmente escuto.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="tamanho-padrao-caixa">
+					<hr class="my-1" />
+					<h3>Inova Week - O dia que sai no jornal!</h3>
+					<div class="my-1 w-full flex-col">
+						<div class="w-full centralizado my-1">
+							<img
+								src="./img/Inova-week/20241030_140412.jpg"
+								alt=""
+								width="60%"
+							/>
+						</div>
+						<div class="w-full">
+							<p class="my-1 texto">
+								Esse dia foi muito especial para
+								mim. Participei de um evento na
+								Universidade Vila Velha (UVV)
+								com o projeto Horta
+								Autoirrigável. Nosso projeto
+								competiu com diversas escolas e,
+								com muito esforço e dedicação,
+								conseguimos nos destacar e sair
+								vitoriosos. Foi uma experiência
+								incrível e gratificante!
+							</p>
+						</div>
+						<div class="w-full">
+							<hr class="my-1" />
+							<h3>Corrida!</h3>
+							<div class="flex my-1 w-full">
+								<div class="w-50 centralizado">
+									<p class="texto my-1">
+										Recentemente
+										descobri no kart um
+										novo hobbie que tem
+										me trazido muita
+										diversão e
+										adrenalina. A
+										experiência de
+										pilotar vai muito
+										além da velocidade —
+										envolve estratégia,
+										controle, foco e
+										muita emoção a cada
+										curva.
+									</p>
+									<p class="texto my-1">
+										Comecei por
+										curiosidade, mas
+										logo percebi o
+										quanto essa
+										atividade me
+										empolga. O kart me
+										ensina sobre tomada
+										de decisão rápida,
+										concentração e até
+										trabalho em equipe,
+										quando estou com
+										amigos ou em
+										eventos. Cada
+										corrida é uma chance
+										de melhorar meu
+										desempenho e
+										desafiar meus
+										próprios limites.
+									</p>
+								</div>
+								<div class="w-50 centralizado">
+									<img
+										src="img/hobbie/301a1988.jpg"
+										alt="Banner Stardow Valley"
+										width="70%"
+									/>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 	</body>
 </html>
