adicionando responsividade para dispositivos menores

--- a/index.html
+++ b/index.html
@@ -28,12 +28,15 @@
 					<a
 						href="https://github.com/GGSuave"
 						class="link-nav"
-						external
+						target="_blank"
+						rel="external"
 						>GitHub</a
 					>
 				</li>
 				<li class="item">
-					<a href="" class="link-nav">Serviços</a>
+					<a href="./servicos/" class="link-nav"
+						>Serviços</a
+					>
 				</li>
 			</nav>
 		</header>
@@ -47,7 +50,7 @@
 					<div class="w-50 caixa-texto">
 						<div>
 							<h1 class="nome">Guilherme Suave</h1>
-							<div class="div-paragrafo">
+							<div class="div-paragrafo texto">
 								<p>
 									Sou estudante de Ciência
 									da Computação na UVV e
@@ -110,12 +113,14 @@
 								/>
 							</div>
 							<div class="w-full centralizado">
-								<h3>
+								<h3 class="my-1">
 									CIEE / EL Produções de
 									Software
 								</h3>
-								<p>
-									&#x1F4BC; Menor Aprendiz -
+								<p class="mb-1">
+									&#x1F4BC; Menor Aprendiz
+								</p>
+								<p class="mb-1">
 									&#x1F4C5; Set 2021 a Dez
 									2022
 								</p>
@@ -130,12 +135,14 @@
 								/>
 							</div>
 							<div class="w-full centralizado mb-1">
-								<h3>
+								<h3 class="my-1">
 									EL Produções de Software
 								</h3>
-								<p>
+								<p class="mb-1">
 									&#x1F4BC; Auxiliar de
-									Programação Pleno —
+									Programação Pleno
+								</p>
+								<p class="mb-1">
 									&#x1F4C5; Fev 2023 até o
 									momento
 								</p>
@@ -143,7 +150,9 @@
 						</div>
 					</div>
 					<div class="w-full caixa-programa-atual flex">
-						<div class="w-50 my-1 texto-programa-atual">
+						<div
+							class="div-programa my-1 texto-programa-atual"
+						>
 							<p class="texto">
 								Atualmente, estou atuando com a
 								linguagem Vue.js no meu
@@ -168,11 +177,11 @@
 								reaproveitado.
 							</p>
 						</div>
-						<div class="w-50 centralizado">
+						<div class="div-programa centralizado">
 							<img
 								src="./img/programacao/Vue.js_Logo_2.svg.png"
 								alt="Logo Vue.Js"
-								width="15%"
+								class="logo-vue"
 							/>
 						</div>
 					</div>
@@ -182,7 +191,9 @@
 				<div class="tamanho-padrao-caixa">
 					<h1 class="my-1">Um Pouco Mais Sobre Mim</h1>
 					<div class="flex w-full">
-						<div class="w-50 centralizado">
+						<div
+							class="w-50 centralizado div-pouco-mais"
+						>
 							<iframe
 								width="360"
 								height="215"
@@ -194,7 +205,9 @@
 								allowfullscreen
 							></iframe>
 						</div>
-						<div class="w-50 centralizado">
+						<div
+							class="w-50 centralizado div-pouco-mais"
+						>
 							<h3>Esse é o meu estilo músical!</h3>
 							<p class="texto">
 								Pode parecer um pouco diferente
@@ -212,7 +225,7 @@
 							<img
 								src="./img/Inova-week/20241030_140412.jpg"
 								alt=""
-								width="60%"
+								class="img-inova-week"
 							/>
 						</div>
 						<div class="w-full">
@@ -233,7 +246,9 @@
 							<hr class="my-1" />
 							<h3>Corrida!</h3>
 							<div class="flex my-1 w-full">
-								<div class="w-50 centralizado">
+								<div
+									class="w-50 centralizado div-hobbie"
+								>
 									<p class="texto my-1">
 										Recentemente
 										descobri no kart um
@@ -270,11 +285,13 @@
 										próprios limites.
 									</p>
 								</div>
-								<div class="w-50 centralizado">
+								<div
+									class="w-50 centralizado div-hobbie"
+								>
 									<img
 										src="img/hobbie/301a1988.jpg"
 										alt="Banner Stardow Valley"
-										width="70%"
+										class="img-hobbie"
 									/>
 								</div>
 							</div>
