finalização do site

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<title>Home</title>
-		<link rel="stylesheet" href="style/geral.css" />
 		<link rel="stylesheet" href="style/home.css" />
 	</head>
 	<body>
 		<header class="cabecalho">
 			<nav class="menus">
 				<li class="item">
-					<a href="" class="link-nav selecionado">Home</a>
+					<a
+						href="./index.html"
+						class="link-nav selecionado"
+						>Home</a
+					>
 				</li>
 				<li class="item">
 					<a
