--- a/servicos/index.html
+++ b/servicos/index.html
@@ -34,9 +34,7 @@
 					>
 				</li>
 				<li class="item">
-					<a
-						href="./index.html"
-						class="link-nav selecionado"
+					<a href="./" class="link-nav selecionado"
 						>Serviços</a
 					>
 				</li>
@@ -46,6 +44,14 @@
 		<main>
 			<section>
 				<div class="opcoes">
+					<h2 class="titulo">
+						Selecione o Serviço desejado
+					</h2>
+					<p class="paragrafo">
+						Selecione o serviço que mais se encaixa a
+						você, e sejá redimencionado a área de
+						contato!
+					</p>
 					<div
 						class="flex w-full tamanho-padrao-caixa caixa pc"
 					>
