--- a/contato/index.html
+++ b/contato/index.html
@@ -35,7 +35,7 @@
 				</li>
 				<li class="item">
 					<a
-						href="./index.html"
+						href="../servicos/"
 						class="link-nav selecionado"
 						>Serviços</a
 					>
