adicionando favicon, e ultimos ajutes

--- a/contato/index.html
+++ b/contato/index.html
@@ -9,12 +9,18 @@
 		<title>Contato</title>
 
 		<link rel="stylesheet" href="../style/contato.css" />
+
+		<link
+			rel="shortcut icon"
+			href="../favicon/android-chrome-512x512.png"
+			type="image/x-icon"
+		/>
 	</head>
 	<body>
 		<header class="cabecalho">
 			<nav class="menus">
 				<li class="item">
-					<a href="../index.html" class="link-nav">Home</a>
+					<a href="../" class="link-nav">Home</a>
 				</li>
 				<li class="item">
 					<a
