--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 		/>
 		<title>Home</title>
 		<link rel="stylesheet" href="style/home.css" />
+		<link
+			rel="shortcut icon"
+			href="../favicon/android-chrome-512x512.png"
+			type="image/x-icon"
+		/>
 	</head>
 	<body>
 		<header class="cabecalho">
