--- a/servicos/index.html
+++ b/servicos/index.html
@@ -8,13 +8,18 @@
 		/>
 		<title>Serviços</title>
 		<link rel="stylesheet" href="./../style/servico.css" />
+		<link
+			rel="shortcut icon"
+			href="../favicon/android-chrome-512x512.png"
+			type="image/x-icon"
+		/>
 		<script src="../js/servico.js"></script>
 	</head>
 	<body>
 		<header class="cabecalho">
 			<nav class="menus">
 				<li class="item">
-					<a href="../index.html" class="link-nav">Home</a>
+					<a href="../" class="link-nav">Home</a>
 				</li>
 				<li class="item">
 					<a
