--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
 		<header class="cabecalho">
 			<nav class="menus">
 				<li class="item">
-					<a
-						href="./index.html"
-						class="link-nav selecionado"
-						>Home</a
-					>
+					<a href="./" class="link-nav selecionado">Home</a>
 				</li>
 				<li class="item">
 					<a
