corrigindo erro no favicon do index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="style/home.css" />
 		<link
 			rel="shortcut icon"
-			href="../favicon/android-chrome-512x512.png"
+			href="./favicon/android-chrome-512x512.png"
 			type="image/x-icon"
 		/>
 	</head>
