--- a/contato/index.html
+++ b/contato/index.html
@@ -7,14 +7,7 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<title>Contato</title>
-
 		<link rel="stylesheet" href="../style/contato.css" />
-
-		<link
-			rel="shortcut icon"
-			href="../favicon/android-chrome-512x512.png"
-			type="image/x-icon"
-		/>
 	</head>
 	<body>
 		<header class="cabecalho">
@@ -48,154 +41,160 @@
 				</li>
 			</nav>
 		</header>
-
 		<main>
 			<section class="flex-col w-full centralizado caixa">
-				<div class="tamanho-padrao-caixa my-1">
-					<h1 class="titulo">Contato</h1>
-					<form class="Contato flex-col centralizado">
-						<div class="flex w-full">
-							<div class="form-divisao">
-								<label for="nome" class="label"
-									>Nome
-									<span class="required"
-										>*</span
-									></label
-								>
-								<div class="div-input">
-									<input
-										type="text"
-										id="nome"
-										required
-										class="input"
-									/>
+				<div class="caixa-contato">
+					<div class="cabecalho-contato">
+						<h2 class="titulo-contato">Contato</h2>
+					</div>
+					<div>
+						<form class="w-full form">
+							<div class="flex w-full gap-1 mb-1">
+								<div class="form-divisao">
+									<label
+										for="nome"
+										class="label"
+										>Nome Completo
+									</label>
+									<div class="div-input">
+										<input
+											type="text"
+											id="nome"
+											required
+											class="input"
+										/>
+									</div>
+								</div>
+								<div class="form-divisao">
+									<label
+										for="email"
+										class="label"
+										>Email
+									</label>
+									<div class="div-input">
+										<input
+											type="email"
+											id="email"
+											class="input"
+											required
+										/>
+									</div>
 								</div>
 							</div>
-							<div class="form-divisao">
-								<label for="email" class="label"
-									>Email
-									<span class="required"
-										>*</span
-									></label
-								>
-								<div class="div-input">
-									<input
-										type="email"
-										id="email"
-										class="input"
-										required
-									/>
+							<div class="flex w-full gap-1 mb-1">
+								<div class="form-divisao">
+									<label
+										for="tipoPessoa"
+										class="label"
+										>Escolha o tipo de
+										pessoa
+									</label>
+									<div class="div-input">
+										<select
+											id="tipoPessoa"
+											name="tipoPessoa"
+											class="input"
+											required
+										>
+											<option
+												value="fisica"
+												selected
+											>
+												Pessoa
+												Física
+											</option>
+											<option
+												value="juridica"
+											>
+												Pessoa
+												Jurídica
+											</option>
+										</select>
+									</div>
+								</div>
+								<div class="form-divisao">
+									<label
+										for="cpf"
+										class="label"
+										>CPF/CNPJ
+									</label>
+									<div class="div-input">
+										<input
+											type="text"
+											id="cpf"
+											class="input"
+											required
+											placeholder="XXX.XXX.XXX-XX ou XX.XXX.XXX/0001-XX"
+										/>
+									</div>
 								</div>
 							</div>
-						</div>
-
-						<div class="flex w-full">
-							<div class="form-divisao">
-								<label for="phone" class="label"
-									>Telefone
-									<span class="required"
-										>*</span
-									></label
-								>
-								<div class="div-input">
-									<input
-										type="tel"
-										id="phone"
-										required
-										class="input"
-										placeholder="(XX) XXXX-XXXX"
-									/>
-								</div>
-							</div>
-							<div class="form-divisao">
-								<label
-									for="tipoPessoa"
-									class="label"
-									>Escolha o tipo de pessoa
-									<span class="required"
-										>*</span
-									></label
-								>
-								<div class="div-input">
-									<select
-										id="tipoPessoa"
-										name="tipoPessoa"
-										class="input"
-										required
+							<div class="flex w-full gap-1 mb-1">
+								<div class="form-divisao">
+									<label
+										for="dataHora"
+										class="label"
 									>
-										<option
-											value="fisica"
-										>
-											Pessoa Física
-										</option>
-										<option
-											value="juridica"
-										>
-											Pessoa
-											Jurídica
-										</option>
-									</select>
+										Escolha a data e o
+										horário para o
+										atendimento
+									</label>
+									<div class="div-input">
+										<input
+											type="datetime-local"
+											id="dataHora"
+											name="dataHora"
+											class="input"
+											required
+										/>
+									</div>
 								</div>
-							</div>
-						</div>
-
-						<div class="flex w-full">
-							<div class="form-divisao">
-								<label
-									for="dataHora"
-									class="label"
-									>Escolha a data e o
-									horário para o
-									atendimento</label
-								>
-								<div class="div-input">
-									<input
-										type="datetime-local"
-										id="dataHora"
-										name="dataHora"
-										class="input"
-										required
-									/>
-								</div>
-							</div>
-							<div class="form-divisao">
-								<label for="plano" class="label"
-									>Plano
-									<span class="required"
-										>*</span
-									></label
-								>
-								<div class="div-input">
-									<select
-										id="plano"
-										name="plano"
-										class="input"
-										required
+								<div class="form-divisao">
+									<label
+										for="plano"
+										class="label"
+										>Plano
+										<span
+											class="required"
+											>*</span
+										></label
 									>
-										<option
-											value="Basic"
+									<div class="div-input">
+										<select
+											id="plano"
+											name="plano"
+											class="input"
+											required
 										>
-											Basic
-										</option>
-										<option
-											value="Intermediate"
-										>
-											Intermediate
-										</option>
-										<option
-											value="Premiun"
-										>
-											Premiun
-										</option>
-									</select>
+											<option
+												value="Basic"
+											>
+												Basic
+											</option>
+											<option
+												value="Intermediate"
+											>
+												Intermediate
+											</option>
+											<option
+												value="Premium"
+											>
+												Premium
+											</option>
+										</select>
+									</div>
 								</div>
 							</div>
-						</div>
-
-						<button type="submit" class="button">
-							Enviar
-						</button>
-					</form>
+							<div class="flex w-full justify-end">
+								<button
+									type="submit"
+									class="button"
+								>
+									Enviar
+								</button>
+							</div>
+						</form>
+					</div>
 				</div>
 			</section>
 		</main>
