adicionando o fav-con na tela de contato

--- a/contato/index.html
+++ b/contato/index.html
@@ -8,6 +8,11 @@
 		/>
 		<title>Contato</title>
 		<link rel="stylesheet" href="../style/contato.css" />
+		<link
+			rel="shortcut icon"
+			href="../favicon/android-chrome-512x512.png"
+			type="image/x-icon"
+		/>
 	</head>
 	<body>
 		<header class="cabecalho">
