trocando o nome dos serviços

--- a/servicos/index.html
+++ b/servicos/index.html
@@ -66,7 +66,7 @@
 						>
 							<div>
 								<h1 class="my-1 titulo-card">
-									Basic Site
+									Site Básico
 								</h1>
 								<div>
 									<ul class="lista">
@@ -140,7 +140,7 @@
 						>
 							<div>
 								<h1 class="my-1 titulo-card">
-									Premiun Site
+									Site Avançado
 								</h1>
 								<div>
 									<ul class="lista">
@@ -231,7 +231,7 @@
 						>
 							<div>
 								<h1 class="my-1 titulo-card">
-									Intermediate Site
+									Site Intermediário
 								</h1>
 								<div>
 									<ul class="lista">
